syntax = "proto3";

package jonline;

import "posts.proto";

message Conversation {
  string id = 1;
  optional string name = 2;
  repeated string user_ids = 3;
}

message ConversationPost {
  string conversation_id = 1;
  string post_id = 2;
}

message GroupConversationPost {
  string group_id = 1;
  string post_id = 2;
}

// Request to 
message CreateConversationPostRequest {
  string conversation_id = 1;
  Post post = 2;
}

message CreateGroupConversationPostRequest {
  string group_id = 1;
  Post post = 2;
}
